handled some errors

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="row1">
           <div class="row" id="row">
             <h4 id="city-and-date">City name</h4>
-            <img id="wicon" src="foo" alt="Weather icon">
+            <img id="wicon" src="#" alt="Weather icon">
           </div>
           <div id="temperature"></div>
           <div id="humidity"></div>
@@ -46,31 +46,31 @@
         <div class="row" id="row2">
           <div class="col-md-2 rounded">
             <div class="date"></div>
-            <img src="foo" alt="" >
+            <img src="#" alt="" >
             <div></div>
             <div></div>
           </div>
           <div class="col-md-2 rounded">
               <div class="date"></div>
-              <img src="foo" alt=""  >
+              <img src="#" alt=""  >
               <div></div>
               <div></div>
           </div>
           <div class="col-md-2 rounded">
               <div class="date"></div>
-              <img src="foo" alt=""  >
+              <img src="#" alt=""  >
               <div></div>
               <div></div>
           </div>
           <div class="col-md-2 rounded">
               <div class="date"></div>
-              <img src="foo" alt=""  >
+              <img src="#" alt=""  >
               <div></div>
               <div></div>
           </div>
           <div class="col-md-2 rounded">
               <div class="date"></div>
-              <img src="foo" alt=""  >
+              <img src="#" alt=""  >
               <div></div>
               <div></div>
           </div>
