--- a/index.html
+++ b/index.html
@@ -29,49 +29,51 @@
           <div id="spinner" class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
               <span class="sr-only">Loading...</span>
             </div>
-        <div id="row1">
-          <div class="row" id="row">
-            <h4 id="city-and-date">City name</h4>
-            <img id="wicon" src="#" alt="Weather icon">
+        <div id="rows">
+          <div id="row1">
+            <div class="row" id="row">
+              <h4 id="city-and-date">City name</h4>
+              <img id="wicon" src="#" alt="Weather icon">
+            </div>
+            <div id="temperature"></div>
+            <div id="humidity"></div>
+            <div id="wind-speed"></div>
+            <div id="uv-index"></div>
           </div>
-          <div id="temperature"></div>
-          <div id="humidity"></div>
-          <div id="wind-speed"></div>
-          <div id="uv-index"></div>
-        </div>
 
-        <div class="row" id="row2-header"><h4>5-Day Forecast:</h4></div>
-        <div class="row" id="row2">
-          <div class="col-md-2 rounded">
-            <div class="date"></div>
-            <img src="#" alt="" >
-            <div></div>
-            <div></div>
-          </div>
-          <div class="col-md-2 rounded">
+          <div class="row" id="row2-header"><h4>5-Day Forecast:</h4></div>
+          <div class="row" id="row2">
+            <div class="col-md-2 rounded">
               <div class="date"></div>
-              <img src="#" alt=""  >
+              <img src="#" alt="" >
               <div></div>
               <div></div>
-          </div>
-          <div class="col-md-2 rounded">
-              <div class="date"></div>
-              <img src="#" alt=""  >
-              <div></div>
-              <div></div>
-          </div>
-          <div class="col-md-2 rounded">
-              <div class="date"></div>
-              <img src="#" alt=""  >
-              <div></div>
-              <div></div>
-          </div>
-          <div class="col-md-2 rounded">
-              <div class="date"></div>
-              <img src="#" alt=""  >
-              <div></div>
-              <div></div>
-          </div>
+            </div>
+            <div class="col-md-2 rounded">
+                <div class="date"></div>
+                <img src="#" alt=""  >
+                <div></div>
+                <div></div>
+            </div>
+            <div class="col-md-2 rounded">
+                <div class="date"></div>
+                <img src="#" alt=""  >
+                <div></div>
+                <div></div>
+            </div>
+            <div class="col-md-2 rounded">
+                <div class="date"></div>
+                <img src="#" alt=""  >
+                <div></div>
+                <div></div>
+            </div>
+            <div class="col-md-2 rounded">
+                <div class="date"></div>
+                <img src="#" alt=""  >
+                <div></div>
+                <div></div>
+            </div>
+        </div>
       </div>
      </div>
 
